[gd_scene load_steps=4 format=3 uid="uid://b07i30w3ey3aa"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Custom_Editors/Scripts/PlayerAttributeEditor.gd" id="1_720us"]
[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="2_72bbp"]
[ext_resource type="PackedScene" uid="uid://d1h1rpwt8f807" path="res://Scenes/ContentManager/Custom_Widgets/Sprite_Selector_Popup.tscn" id="3_pwtky"]

[node name="PlayerAttributeEditor" type="Control" node_paths=PackedStringArray("icon_rect", "id_text_label", "path_text_label", "name_text_edit", "description_text_edit", "sprite_selector", "min_amount_spinbox", "max_amount_spinbox", "current_amount_spinbox", "depletion_rate_spinbox", "depletion_effect", "ui_color_picker", "mode_tab_container", "fixed_grid", "fixed_amount_spin_box", "default_grid")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_720us")
icon_rect = NodePath("VBoxContainer/FormGrid/AttributeImageDisplay")
id_text_label = NodePath("VBoxContainer/FormGrid/IDTextLabel")
path_text_label = NodePath("VBoxContainer/FormGrid/PathTextLabel")
name_text_edit = NodePath("VBoxContainer/FormGrid/NameTextEdit")
description_text_edit = NodePath("VBoxContainer/FormGrid/DescriptionTextEdit")
sprite_selector = NodePath("Sprite_selector")
min_amount_spinbox = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/MinAmountSpinBox")
max_amount_spinbox = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/MaxAmountSpinBox")
current_amount_spinbox = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/CurrentAmountSpinBox")
depletion_rate_spinbox = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/DepletionRateSpinBox")
depletion_effect = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/DepletionEffectOptionButton")
ui_color_picker = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default/UIColorPicker")
mode_tab_container = NodePath("VBoxContainer/FormGrid/ModeTabContainer")
fixed_grid = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Fixed")
fixed_amount_spin_box = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Fixed/FixedAmountSpinBox")
default_grid = NodePath("VBoxContainer/FormGrid/ModeTabContainer/Default")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="FormGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ImageLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite:"

[node name="AttributeImageDisplay" type="TextureRect" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_72bbp")
expand_mode = 3

[node name="PathLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite name"

[node name="PathTextLabel" type="Label" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="IDLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "ID:"

[node name="IDTextLabel" type="Label" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NameLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
tooltip_text = "Player friendly name to display thi sattribute"
focus_next = NodePath("../DescriptionTextEdit")
focus_previous = NodePath("../AttributeImageDisplay")
placeholder_text = "Health"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
tooltip_text = "Use this field to describe what this player attribute is and what effect it might have if depleted or full."
focus_previous = NodePath("../NameTextEdit")
placeholder_text = "Describe what this attribute is about"
wrap_mode = 1

[node name="TipHeaderLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Tip"

[node name="TipLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Pick either Default mode or Fixed mode
Default mode: For things like food and health. Will be visible in the player's UI and has to be actively managed by the player
Fixed mode: Will not be shown in the UI but can be used for background mechanics, such as inventory space."

[node name="ModeLabel2" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Mode"

[node name="ModeTabContainer" type="TabContainer" parent="VBoxContainer/FormGrid"]
layout_mode = 2
current_tab = 1

[node name="Default" type="GridContainer" parent="VBoxContainer/FormGrid/ModeTabContainer"]
visible = false
layout_mode = 2
columns = 2
metadata/_tab_index = 0

[node name="MinAmountLabel2" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "Min amount"

[node name="MinAmountSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
tooltip_text = "The minimum amount this attribute can be. Once the current amount reaches this value, it is considered depleted."
max_value = 1000.0

[node name="MaxAmountLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "Max amount"

[node name="MaxAmountSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
tooltip_text = "The maximum amount this attribute can be. When the current amount reaches this value, it is considered full."
max_value = 1000.0
value = 100.0

[node name="CurrentAmountLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "Starting amount"

[node name="CurrentAmountSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
tooltip_text = "The amount the player starts with."
max_value = 1000.0
value = 99.0

[node name="DepletionRateLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "Depletion rate"

[node name="DepletionRateSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
tooltip_text = "The amount to subtract each second. With a \"max amount\" of 100 and a depletion rate of 0.02, it will take over an hour real time to deplete."
step = 0.01
value = 0.02

[node name="DepletionEffectLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "Depletion effect"

[node name="DepletionEffectOptionButton" type="OptionButton" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "none"
popup/item_1/text = "death"
popup/item_1/id = 1

[node name="UIColorLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
text = "UI color"

[node name="UIColorPicker" type="ColorPicker" parent="VBoxContainer/FormGrid/ModeTabContainer/Default"]
layout_mode = 2
tooltip_text = "The color this attribute will have if it's displayed in the UI. In case this attribute is displayed by a progressbar, the progressbar will assume this color."
color = Color(0.933994, 0.202531, 0.220332, 1)
picker_shape = 4
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="Fixed" type="GridContainer" parent="VBoxContainer/FormGrid/ModeTabContainer"]
layout_mode = 2
columns = 2
metadata/_tab_index = 1

[node name="TipHeaderLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Fixed"]
layout_mode = 2
text = "Tip"

[node name="TipLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Fixed"]
layout_mode = 2
text = "A fixed amount will not automatically increase or decrease. It
can be affected by buffs and debuffs. This property is not
visible in the UI but has effects in the background."

[node name="FixedAmountLabel" type="Label" parent="VBoxContainer/FormGrid/ModeTabContainer/Fixed"]
layout_mode = 2
text = "Fixed amount"

[node name="FixedAmountSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid/ModeTabContainer/Fixed"]
layout_mode = 2

[node name="Sprite_selector" parent="." instance=ExtResource("3_pwtky")]
visible = false

[connection signal="button_up" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="gui_input" from="VBoxContainer/FormGrid/AttributeImageDisplay" to="." method="_on_attribute_image_display_gui_input"]
[connection signal="sprite_selected_ok" from="Sprite_selector" to="." method="_on_sprite_selector_sprite_selected_ok"]
